--- a/Django_bg/templates/setting.html
+++ b/Django_bg/templates/setting.html
@@ -17,15 +17,11 @@
 </head>
 
 <body>
-
-
-       
-
-          
-
             <div class="container m-auto"> 
 
-                <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-3"> Account Setting </h1>
+                <h1 class="text-2xl leading-none text-gray-900 tracking-tight mt-3"><a href="/" >Home</a> / Account Setting for <b> {{user.username}} </h1>
+
+                {% comment %} 
                 <ul class="mt-5 -mr-3 flex-nowrap lg:overflow-hidden overflow-x-scroll uk-tab">
                     <li class="uk-active"><a href="#">General</a></li>
                     <li><a href="#">Profile</a></li>
@@ -34,36 +30,50 @@
                     <li><a href="#">Social links</a></li>
                     <li><a href="#">Billing</a></li>
                     <li><a href="#">Security</a></li>
-                </ul>
+                </ul> 
+                {% endcomment %}
+
+                <br>
+                <hr>
 
                 <div class="grid lg:grid-cols-3 mt-12 gap-8">
                     <div>
-                        <h3 class="text-xl mb-2"> Basic</h3>
+                        <h3 class="text-xl mb-2"> General</h3>
                         <p></p>
                     </div>
                     <div class="bg-white rounded-md lg:shadow-lg shadow col-span-2">
     
                        <div class="grid grid-cols-2 gap-3 lg:p-6 p-4">
-                           <div>
+                            <div>
+                                <label for=""> Profile image</label>
+                                <input type="text" placeholder="Your name.." class="shadow-none bg-gray-100">
+                            </div>
+
+                            <div>
                                <label for=""> First name</label>
                                <input type="text" placeholder="Your name.." class="shadow-none bg-gray-100">
-                           </div>
-                           <div>
+                            </div>
+
+                            <div>
                                <label for=""> Last name</label>
                                <input type="text" placeholder="Your name.." class="shadow-none bg-gray-100">
                             </div>
+
                             <div class="col-span-2">
                                 <label for=""> Email</label>
                                 <input type="text" placeholder="Your name.." class="shadow-none bg-gray-100">
                             </div>
+
                             <div class="col-span-2">
-                                <label for="about">About me</label>  
+                                <label for="about">Bio</label>  
                                 <textarea id="about" name="about" rows="3"  class="shadow-none bg-gray-100"></textarea>
                             </div> 
+                            
                             <div class="col-span-2">
                                 <label for=""> Location</label>
                                 <input type="text" placeholder="" class="shadow-none bg-gray-100">
                             </div>
+
                             <div>
                                <label for=""> Working at</label>
                                <input type="text" placeholder="" class="shadow-none bg-gray-100">
